[gd_scene load_steps=26 format=3 uid="uid://dfcuf6ogfruj6"]

[ext_resource type="Script" uid="uid://o5wjer4eie3f" path="res://skriptit/kukka.gd" id="1_vd3gl"]
[ext_resource type="Texture2D" uid="uid://dite5ccabklvd" path="res://grafiikka/LightFlower.png" id="2_c6k0h"]
[ext_resource type="Texture2D" uid="uid://bshv5yglnr7ru" path="res://grafiikka/Valo128.png" id="3_hfdkj"]
[ext_resource type="Texture2D" uid="uid://b8qmv3n124e3u" path="res://grafiikka/LightFlower-Sheet.png" id="3_xitgs"]
[ext_resource type="Texture2D" uid="uid://b5gd4vu60u7ls" path="res://grafiikka/LightBall.png" id="4_aw5ux"]
[ext_resource type="AudioStream" uid="uid://cifjiw8m6xc5a" path="res://audio/valopallo/valokukan_resonanssi_Am.mp3" id="5_wvag6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vgmah"]
atlas = ExtResource("2_c6k0h")
region = Rect2(0, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qik3f"]
atlas = ExtResource("2_c6k0h")
region = Rect2(34, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bidm5"]
atlas = ExtResource("2_c6k0h")
region = Rect2(68, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk3ha"]
atlas = ExtResource("2_c6k0h")
region = Rect2(102, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xed8s"]
atlas = ExtResource("3_xitgs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op0q4"]
atlas = ExtResource("3_xitgs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dlhs"]
atlas = ExtResource("3_xitgs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iujx0"]
atlas = ExtResource("3_xitgs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g42fc"]
atlas = ExtResource("3_xitgs")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuk0w"]
atlas = ExtResource("3_xitgs")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufjy1"]
atlas = ExtResource("3_xitgs")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp53l"]
atlas = ExtResource("3_xitgs")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agg6p"]
atlas = ExtResource("3_xitgs")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2clcg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgmah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qik3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bidm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk3ha")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xed8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op0q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dlhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iujx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g42fc")
}],
"loop": true,
"name": &"disable",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuk0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufjy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp53l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agg6p")
}],
"loop": true,
"name": &"enable",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yjw0c"]
radius = 17.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rw8h0"]
radius = 60.208

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l8d32"]
blend_mode = 1
light_mode = 1

[sub_resource type="Curve" id="Curve_jjl0m"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.140449, 1), 0.0, 0.0, 0, 0, Vector2(0.814607, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_g71rd"]
offsets = PackedFloat32Array(0, 0.36, 0.673333, 0.766667, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.836735, 1, 1, 1, 0)

[node name="Kukka" type="Area2D" groups=["kukka"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_vd3gl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2clcg")
frame_progress = 0.399243

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.0045216
shape = SubResource("CapsuleShape2D_yjw0c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="PointLight2D" type="PointLight2D" parent="Area2D"]
texture_filter = 2
range_item_cull_mask = 3
shadow_enabled = true
texture = ExtResource("3_hfdkj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 0.0173222
shape = SubResource("CircleShape2D_rw8h0")

[node name="HuiluAjastin" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 10
material = SubResource("CanvasItemMaterial_l8d32")
emitting = false
amount = 10
texture = ExtResource("4_aw5ux")
one_shot = true
direction = Vector2(-1, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 70.71
initial_velocity_max = 101.01
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
radial_accel_min = 40.0
radial_accel_max = 50.0
damping_min = 39.394
damping_max = 76.768
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_jjl0m")
color_ramp = SubResource("Gradient_g71rd")

[node name="AudioValokukanResonanssi" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wvag6")
bus = &"Kaiku"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
